build_output_8.txt
[  1%] Building CXX object CMakeFiles/RawrEngine.dir/src/cpu_inference_engine.cpp.obj
In file included from D:\rawrxd\src\cpu_inference_engine.cpp:1:
D:\rawrxd\src\cpu_inference_engine.h:181:29: error: 'BPETokenizer' is not a member of 'RawrXD'; did you mean 'BPETokenizer'?
  181 |     std::unique_ptr<RawrXD::BPETokenizer> m_tokenizer;s> m_layers;
      |                             ^~~~~~~~~~~~
In file included from D:\rawrxd\src\cpu_inference_engine.h:10:
D:\rawrxd\src\engine/bpe_tokenizer.h:7:7: note: 'BPETokenizer' declared here
    7 | class BPETokenizer {
      |       ^~~~~~~~~~~~
D:\rawrxd\src\cpu_inference_engine.h:181:41: error: template argument 1 is invalid
  181 |     std::unique_ptr<RawrXD::BPETokenizer> m_tokenizer;s> m_layers;
      |                                         ^
D:\rawrxd\src\cpu_inference_engine.h:181:41: error: template argument 2 is invalid
D:\rawrxd\src\cpu_inference_engine.h:181:10: error: '<expression error>' in namespace 'std' does not name a type
  181 |     std::unique_ptr<RawrXD::BPETokenizer> m_tokenizer;s> m_layers;
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
D:\rawrxd\src\cpu_inference_engine.h:181:55: error: 's' does not name a type
  181 |     std::unique_ptr<RawrXD::BPETokenizer> m_tokenizer;s> m_layers;
      |                                                       ^
D:\rawrxd\src\cpu_inference_engine.h:185:26: error: redeclaration of 'std::vector<CPUInference::KVCache> CPUInference::CPUInferenceEngine::m_kv_cache'
  185 |     std::vector<KVCache> m_kv_cache;  std::vector<float*> m_memoryPool;
      |                          ^~~~~~~~~~
D:\rawrxd\src\cpu_inference_engine.h:174:26: note: previous declaration 'std::vector<CPUInference::KVCache> CPUInference::CPUInferenceEngine::m_kv_cache'
  174 |     std::vector<KVCache> m_kv_cache;
      |                          ^~~~~~~~~~
D:\rawrxd\src\cpu_inference_engine.h:201:1: error: expected declaration before '}' token
  201 | } // namespace CPUInference};    std::vector<float*> m_memoryPool;    // Memory pool for tensors        Tensor m_outputWeights;    std::vector<LayerWeights> m_layers;    // Weights organized by layer        std::unordered_map<std::string, Tensor> m_weights;
      | ^
D:\rawrxd\src\cpu_inference_engine.cpp:24:45: error: invalid use of incomplete type 'class RawrXD::IMemoryPlugin'
   24 | class StandardMemoryPlugin : public RawrXD::IMemoryPlugin {
      |                                             ^~~~~~~~~~~~~
D:\rawrxd\src\cpu_inference_engine.h:19:11: note: forward declaration of 'class RawrXD::IMemoryPlugin'
   19 |     class IMemoryPlugin;
      |           ^~~~~~~~~~~~~
D:\rawrxd\src\cpu_inference_engine.cpp:26:17: error: 'std::string StandardMemoryPlugin::GetName() const' marked 'override', but does not override
   26 |     std::string GetName() const override { return "Standard"; }
      |                 ^~~~~~~
D:\rawrxd\src\cpu_inference_engine.cpp:27:12: error: 'size_t StandardMemoryPlugin::GetMaxContext() const' marked 'override', but does not override
   27 |     size_t GetMaxContext() const override { return 4096; }
      |            ^~~~~~~~~~~~~
D:\rawrxd\src\cpu_inference_engine.cpp:28:10: error: 'bool StandardMemoryPlugin::Configure(size_t)' marked 'override', but does not override
   28 |     bool Configure(size_t) override { return true; }
      |          ^~~~~~~~~
D:\rawrxd\src\cpu_inference_engine.cpp:29:10: error: 'bool StandardMemoryPlugin::Optimize()' marked 'override', but does not override
   29 |     bool Optimize() override { return true; }
      |          ^~~~~~~~
D:\rawrxd\src\cpu_inference_engine.cpp:32:43: error: invalid use of incomplete type 'class RawrXD::IMemoryPlugin'
   32 | class LargeContextPlugin : public RawrXD::IMemoryPlugin {
      |                                           ^~~~~~~~~~~~~
D:\rawrxd\src\cpu_inference_engine.h:19:11: note: forward declaration of 'class RawrXD::IMemoryPlugin'
   19 |     class IMemoryPlugin;
      |           ^~~~~~~~~~~~~
D:\rawrxd\src\cpu_inference_engine.cpp:34:17: error: 'std::string LargeContextPlugin::GetName() const' marked 'override', but does not override
   34 |     std::string GetName() const override { return "LargeContext"; }
      |                 ^~~~~~~
D:\rawrxd\src\cpu_inference_engine.cpp:35:12: error: 'size_t LargeContextPlugin::GetMaxContext() const' marked 'override', but does not override
   35 |     size_t GetMaxContext() const override { return 32768; }
      |            ^~~~~~~~~~~~~
D:\rawrxd\src\cpu_inference_engine.cpp:36:10: error: 'bool LargeContextPlugin::Configure(size_t)' marked 'override', but does not override
   36 |     bool Configure(size_t) override { return true; }
      |          ^~~~~~~~~
D:\rawrxd\src\cpu_inference_engine.cpp:37:10: error: 'bool LargeContextPlugin::Optimize()' marked 'override', but does not override
   37 |     bool Optimize() override { return true; }
      |          ^~~~~~~~
D:\rawrxd\src\cpu_inference_engine.h: In constructor 'CPUInference::CPUInferenceEngine::CPUInferenceEngine()':
D:\rawrxd\src\cpu_inference_engine.h:169:9: warning: 'CPUInference::CPUInferenceEngine::m_vocabSize' will be initialized after [-Wreorder]
  169 |     int m_vocabSize = 0;
      |         ^~~~~~~~~~~
D:\rawrxd\src\cpu_inference_engine.h:166:9: warning:   'int CPUInference::CPUInferenceEngine::m_embeddingDim' [-Wreorder]
  166 |     int m_embeddingDim = 0;
      |         ^~~~~~~~~~~~~~
D:\rawrxd\src\cpu_inference_engine.cpp:52:1: warning:   when initialized here [-Wreorder]
   52 | CPUInferenceEngine::CPUInferenceEngine()
      | ^~~~~~~~~~~~~~~~~~
D:\rawrxd\src\cpu_inference_engine.h:168:9: warning: 'CPUInference::CPUInferenceEngine::m_numHeads' will be initialized after [-Wreorder]
  168 |     int m_numHeads = 0;
      |         ^~~~~~~~~~
D:\rawrxd\src\cpu_inference_engine.h:157:9: warning:   'int CPUInference::CPUInferenceEngine::m_threadCount' [-Wreorder]
  157 |     int m_threadCount = 1;
      |         ^~~~~~~~~~~~~
D:\rawrxd\src\cpu_inference_engine.cpp:52:1: warning:   when initialized here [-Wreorder]
   52 | CPUInferenceEngine::CPUInferenceEngine()
      | ^~~~~~~~~~~~~~~~~~
D:\rawrxd\src\cpu_inference_engine.cpp: At global scope:
D:\rawrxd\src\cpu_inference_engine.cpp:47:17: warning: 'Metrics& CPUInference::EngineMetrics()' defined but not used [-Wunused-function]
   47 | static Metrics& EngineMetrics() {
      |                 ^~~~~~~~~~~~~
mingw32-make[2]: *** [CMakeFiles\RawrEngine.dir\build.make:169: CMakeFiles/RawrEngine.dir/src/cpu_inference_engine.cpp.obj] Error 1
mingw32-make[1]: *** [CMakeFiles\Makefile2:89: CMakeFiles/RawrEngine.dir/all] Error 2
mingw32-make: *** [Makefile:90: all] Error 2
